; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_iheap_insert.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_iheap_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32 }

@HC = common dso_local global i32 0, align 4
@MAX_WORDS = common dso_local global i32 0, align 4
@H = common dso_local global %struct.TYPE_4__** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @iheap_insert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iheap_insert(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i32, i32* @HC, align 4
  %10 = load i32, i32* @MAX_WORDS, align 4
  %11 = icmp slt i32 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  br label %55

19:                                               ; preds = %1
  %20 = load i32, i32* @HC, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* @HC, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %38, %19
  %23 = load i32, i32* %3, align 4
  %24 = icmp sgt i32 %23, 1
  br i1 %24, label %25, label %49

25:                                               ; preds = %22
  %26 = load i32, i32* %3, align 4
  %27 = ashr i32 %26, 1
  store i32 %27, i32* %4, align 4
  %28 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @H, align 8
  %29 = load i32, i32* %4, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %28, i64 %30
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* %5, align 8
  %36 = icmp sle i64 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %25
  br label %49

38:                                               ; preds = %25
  %39 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @H, align 8
  %40 = load i32, i32* %4, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %39, i64 %41
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %42, align 8
  %44 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @H, align 8
  %45 = load i32, i32* %3, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %44, i64 %46
  store %struct.TYPE_4__* %43, %struct.TYPE_4__** %47, align 8
  %48 = load i32, i32* %4, align 4
  store i32 %48, i32* %3, align 4
  br label %22

49:                                               ; preds = %37, %22
  %50 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %51 = load %struct.TYPE_4__**, %struct.TYPE_4__*** @H, align 8
  %52 = load i32, i32* %3, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %51, i64 %53
  store %struct.TYPE_4__* %50, %struct.TYPE_4__** %54, align 8
  br label %55

55:                                               ; preds = %49, %18
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
